--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "electron-reload": "1.5.0",
     "eslint": "6.8.0",
     "eslint-plugin-import": "2.20.2",
+    "file-saver": "2.0.2",
     "js-yaml": "3.13.1",
     "lodash": "4.17.15",
     "npm-run-all": "4.1.5",
